[package]
name = "structural_macro"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "structural_macro"
path = "src/main.rs"

[lib]
name = "structural_macro_dll"
path = "dll/lib.rs"
crate-type = ["cdylib"]

[dependencies]
iced = "0.13.1"
widestring = "1.1.0"
windows = { version = "0.58.0", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_Controls",
  "Win32_UI_WindowsAndMessaging",
] }
